Add a form in the contact.html file

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,13 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <form action="">
+        <label for="firstName">Nom</label>
+        <input type="text">
+        <label for="lastName">Prénom</label>
+        <input type="text">
+        <label for="email">Email</label>
+        <input type="email">
+    </form>
 </body>
 </html>
