--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,14 @@
 <body>
     <form action="">
         <label for="firstName">Nom</label>
-        <input type="text">
-        <label for="lastName">Prénom</label>
-        <input type="text">
+        <input type="text" name="firstName" id="firstName">
+        <label for="lastName" >Prénom</label>
+        <input type="text" name="lastName" id="lastName">
         <label for="email">Email</label>
-        <input type="email">
+        <input type="email" name="email" id="email">
+        <label for="message">Message</label>
+        <input type="textarea" name="message" id="message">
+        <input type="submit" value="OK">
     </form>
 </body>
 </html>
